# Aoralscan

./: README.md
src/: CMakeLists.txt  CStackWidget.h  main.cpp
